src/test/resources/valid_programs/block_stm_scoping.notc
void main() {
    int a = 27;
    string b = "sss";
    {
        string b = "ttt";
        {
            printInt(a);
            double a = 3.0;
            printDouble(a);
            {
                printString(b);
            }
        }
        printInt(a);

    }
    printString(b);
}
