src/test/resources/syntax_errors/decl_two_types_different.notc
void main() {
    int double var;
}
